--- a/_config.yml
+++ b/_config.yml
@@ -21,31 +21,31 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy                          # the main title
+title: clingfei                         # the main title
 
-tagline: A text-focused Jekyll theme   # it will display as the sub-title
+tagline: 行则将至   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
+  clingfei's blog
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
-url: ''
+url: 'https://clingfei.github.io'
 
 github:
-  username: github_username             # change to your github username
+  username: clingfei             # change to your github username
 
-twitter:
-  username: twitter_username            # change to your twitter username
+zhihu:
+  username: qffds            # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@doamin.com             # change to your email address
+  name: clingfei
+  email: clf700383@gmail.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/username       # change to your github homepage
+    - https://www.zhihu.com/people/qffds     # change to your twitter homepage
+    - https://github.com/clingfei       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -83,7 +83,7 @@ theme_mode:   # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: '/assets/img/favicons/head.png'
 
 # boolean type, the global switch for ToC in posts.
 toc: true
@@ -145,7 +145,7 @@ defaults:
       toc: true         # Display TOC column in posts.
       # DO NOT modify the following parameter unless you are confident enough
       # to update the code of all other post links in this project.
-      permalink: /posts/:title/
+      permalink: /_posts/:title/
   - scope:
       path: _drafts
     values:
